# dmas-final-project

./: .gitignore  README.md  pyproject.toml
dmas_final_project/: main.py  run.sh  util.py
dmas_final_project/agents/: official_news_agent.py  self_news_agent.py  user_agent.py
dmas_final_project/configs/: default.json  experiment.json  experiment_paper1.json  experiment_paper2.json  experiment_paper3.json  experiment_presentation.json  gui.json
dmas_final_project/data/exp2/: aggr.pkl  metric_tracker.pkl
dmas_final_project/data/testMediaAgentNoFeedback/: metric_tracker.pkl
dmas_final_project/data/testNoMediaAgent/: aggr.pkl  metric_tracker.pkl
dmas_final_project/data_processing/: data_aggregator.py  metrics_tracker.py
dmas_final_project/exp1/: aggr.pkl
dmas_final_project/exp3/: metric_tracker.pkl
dmas_final_project/exp4/: aggr.pkl  metric_tracker.pkl
dmas_final_project/models/: news_media_model.py
dmas_final_project/parser/: parser.py
dmas_final_project/plotting/: plotting.py
dmas_final_project/static/js/: custom_network_module.js
dmas_final_project/test/: aggr.pkl  metric_tracker.pkl
dmas_final_project/testMediaAgentFeedback/: aggr.pkl  metric_tracker.pkl
dmas_final_project/testMediaAgentNoFeedback/: aggr.pkl
dmas_final_project/view/: view.py
dmas_final_project/view/js/: custom_network_module_d3.js
docker/: Dockerfile
